--- a/youth-center-app/templates/home/index.html.twig
+++ b/youth-center-app/templates/home/index.html.twig
@@ -1035,10 +1035,10 @@
             <div class="footer-section">
                 <h3>About</h3>
                 <ul>
-                    <li><a href="#">Our Mission</a></li>
-                    <li><a href="#">Our Partners</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="{{ path('app_about') }}">Our Mission</a></li>
+                    <li><a href="{{ path('app_about') }}">Our Partners</a></li>
+                    <li><a href="{{ path('app_about') }}">Privacy Policy</a></li>
+                    <li><a href="{{ path('app_about') }}">Terms of Use</a></li>
                 </ul>
             </div>
         </div>
