--- a/youth-center-app/templates/security/login.html.twig
+++ b/youth-center-app/templates/security/login.html.twig
@@ -18,6 +18,8 @@
             position: absolute;
             width: 200%;
             height: 200%;
+            z-index: 0;
+            pointer-events: none;
             background: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='0.05'%3E%3Cpath d='M20 20c0-5.5-4.5-10-10-10s-10 4.5-10 10 4.5 10 10 10 10-4.5 10-10zm10 0c0-5.5-4.5-10-10-10s-10 4.5-10 10 4.5 10 10 10 10-4.5 10-10z'/%3E%3C/g%3E%3C/svg%3E") repeat;
             animation: patternSlide 30s linear infinite;
         }
@@ -29,6 +31,8 @@
             padding: 40px;
             width: 100%;
             max-width: 400px;
+             position: relative;
+    z-index: 1;
         }
         
         .login-header {
